# remote-secrets

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  aa  floci.yaml  localstack.yaml  wait-for.sh
.agent/: skills.md
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml  devskim.yml  rust-cache.yaml  rust-clippy.yml
config/: crd.yaml
config/default/: kustomization.yaml  manager.yaml  remote-secrets-config.yaml
config/local/: dockerhost.yaml  kustomization.yaml  lifecycle_patch.yaml  secret_patch.yaml
config/simples/: example.yaml  integration.yaml  plaintext.yaml
crd/: Cargo.toml
crd/src/: crd.rs  lib.rs  main.rs
e2e/: dockerhost-linux.yaml  dockerhost-mac.yaml  integration-test.sh  integration.sh  mock-cfn.yaml  retry.sh  services.yaml
e2e/floci/ready.d/: 01-seed-remote-secrets.sh
e2e/wiremock/__files/: cloudformation-describe-stacks.xml
e2e/wiremock/mappings/: aws-cloudformation-describe-stacks.json  aws-secret-json.json  aws-secret-string.json  aws-ssm-json.json  aws-ssm-string.json  cloudformation-describe-stacks.json  secretsmanager-json-secret.json  secretsmanager-string-secret.json  ssm-json-parameter.json  ssm-string-parameter.json
k8s/: Cargo.toml
k8s/src/: secret.rs
main/: Cargo.toml
main/src/: aws.rs  lib.rs  main.rs  manager.rs  metrics.rs  rsecret.rs  utils.rs  vault.rs  web.rs
plugins/: Cargo.toml
plugins/src/: aws_cfn.rs  aws_common.rs  aws_secret_manager.rs  aws_ssm.rs  lib.rs  plaintext.rs  pulumi.rs  vault.rs
src/: aws.rs  backend.rs  crd.rs  crdgen.rs  finalizer.rs  lib.rs  main.rs  manager.rs  metrics.rs  rsecret.rs  utils.rs  vault.rs  web.rs
utils/: Cargo.toml
utils/src/: lib.rs  log.rs  metrics.rs  value.rs
yamls/: controller.yaml  crd.yaml  example.yaml
