[workspace]

members = [
  "main",
  "crd",
  "utils",
  "plugins",
  "k8s",
]

resolver = "2"

[workspace.package]
authors = ["Jerry Chen <jerry153fish@gmail.com>"]
description = "Remote Secret K8s Operator"
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/jerry153fish/remote-secrets"
version = "1.0.6"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
cached = "0.40.0"
futures = "0.3"
json_dotpath = "1.1.0"
k8s-openapi = {version = "0.16.0", features = ["v1_25"], default-features = false}
kube = {version = "0.76.0", features = ["runtime", "client", "derive"]}
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
prometheus = "0.13.4"
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread"]}
