[workspace]

members = [
  "main",
  "crd",
  "utils",
  "plugins",
  "k8s",
]

resolver = "2"

[workspace.package]
authors = ["Jerry Chen <jerry153fish@gmail.com>"]
description = "Remote Secret K8s Operator"
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/jerry153fish/remote-secrets"
version = "1.0.6"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
cached = "0.40.0"
futures = "0.3"
json_dotpath = "1.1.0"
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.4.0"
prometheus = "0.13.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread"]}
