[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "crd"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = {version = "0.4.19", features = ["serde"]}
futures = "0.3"
http = "0.2"
k8s-openapi.workspace = true
log.workspace = true
schemars = {version = "0.8.11", features = ["chrono"]}
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.14"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.71.0"
