[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "crd"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = {version = "0.4.23", features = ["serde"]}
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
schemars = {version = "0.8.12", features = ["chrono"]}
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.19"
