[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "remote-secrets"
repository.workspace = true
version.workspace = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.1"
anyhow.workspace = true
cached = "0.34.0"
chrono = {version = "0.4.19", features = ["serde"]}
crd = {path = "../crd"}
futures = "0.3"
http = "0.2"
json_dotpath.workspace = true
k8s = {path = "../k8s"}
k8s-openapi.workspace = true
log.workspace = true
log4rs.workspace = true
plugins = {path = "../plugins"}
prometheus.workspace = true
reqwest = {version = "0.11", features = ["json"]}
schemars = {version = "0.8.8", features = ["chrono"]}
serde.workspace = true
serde_json.workspace = true
tokio = {version = "1.16.1", features = ["macros", "rt-multi-thread"]}
utils = {path = "../utils"}

[dev-dependencies]
httpmock = "0.6.5"
k9 = "0.11.6"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.71.0"
