[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "remote-secrets"
repository.workspace = true
version.workspace = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
actix-web = "4.2.1"
anyhow.workspace = true
cached.workspace = true
chrono = {version = "0.4.22", features = ["serde"]}
crd = {path = "../crd"}
futures = "0.3"
json_dotpath.workspace = true
k8s = {path = "../k8s"}
k8s-openapi.workspace = true
log.workspace = true
log4rs.workspace = true
plugins = {path = "../plugins"}
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}
utils = {path = "../utils"}

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.71.0"
