[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "remote-secrets"
repository.workspace = true
version.workspace = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
anyhow.workspace = true
cached.workspace = true
chrono = {version = "0.4.28", features = ["serde"]}
crd = {path = "../crd"}
futures.workspace = true
json_dotpath.workspace = true
k8s = {path = "../k8s"}
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
log4rs.workspace = true
plugins = {path = "../plugins"}
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utils = {path = "../utils"}
