[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "plugins"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = "0.56.1"
aws-sdk-appconfig = "0.34.0"
aws-sdk-cloudformation = "0.34.0"
aws-sdk-secretsmanager = "1.50.0"
aws-sdk-ssm = "0.34.0"
aws-smithy-http = "0.56.1"
aws-types = "0.56.1"
cached.workspace = true
crd = {path = "../crd"}
http = "1.1"
json_dotpath.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
reqwest = {version = "0.12", features = ["json"]}
openssl = { version = "0.10", features = ["vendored"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utils = {path = "../utils"}
