[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "plugins"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = "1.5.10"
aws-sdk-appconfig = "1.54.0"
aws-sdk-cloudformation = "1.56.0"
aws-sdk-secretsmanager = "1.54.0"
aws-sdk-ssm = "1.56.0"
aws-smithy-http = "0.61.1"
aws-types = "1.3.5"
cached.workspace = true
crd = {path = "../crd"}
http = "1.2"
json_dotpath.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
reqwest = {version = "0.12", features = ["json"]}
openssl = { version = "0.10", features = ["vendored"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utils = {path = "../utils"}
