[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "plugins"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = "=1.8.15"
aws-sdk-appconfig = "=1.102.0"
aws-sdk-cloudformation = "=1.108.0"
aws-sdk-secretsmanager = "=1.103.0"
aws-sdk-ssm = "=1.108.0"
aws-smithy-http = "=0.63.6"
aws-types = "=1.3.14"
cached.workspace = true
crd = {path = "../crd"}
http = "1.4"
json_dotpath.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
reqwest = {version = "0.13", features = ["json"]}
openssl = { version = "0.10", features = ["vendored"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utils = {path = "../utils"}
