[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "utils"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
crd = {path = "../crd"}
json_dotpath.workspace = true
k8s-openapi.workspace = true
lazy_static.workspace = true
log.workspace = true
log4rs.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
